[package]
name = "bbsynth-rs"
version = "0.1.0"
edition = "2024"
authors = ["Kyle Hipke <kwhipke1@gmail.com>"]
license = "GPL-3"

description = "Virtual Analog synth"

[workspace]
members = ["xtask"]

# the crate type seemingly needs to be this for nih-plug
[lib]
crate-type = ["cdylib"]

[dependencies]
# This fork of nih_plug exposes process_stopped
nih_plug = { git = "https://github.com/Cmdv/nih-plug.git", branch = "expose-process-stopped", features = ["assert_process_allocs"] }
# This fork of nih_plug_iced is updated to use iced 0.14
nih_plug_iced = { git = "https://github.com/Cmdv/nih_plug_iced.git", branch = "screen-cursor-location", features = ["canvas", "svg", "wgpu"] }

atomic_float = "0.1"

