[package]
name = "bbsynth-rs"
version = "0.1.0"
edition = "2024"
authors = ["Kyle Hipke <kwhipke1@gmail.com>"]
license = "GPL-3"

description = "Virtual Analog synth"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# This fork supports iced 0.14
#todo: uncomment
#nih_plug = { git = "https://github.com/chairbender/nih-plug.git", branch = "support-iced-0.14", features = ["standalone", "assert_process_allocs"] }
#nih_plug_iced= { git = "https://github.com/chairbender/nih-plug.git", branch = "support-iced-0.14", features = ["canvas", "svg", "wgpu"] }
nih_plug = { path = "../nih-plug-mine", features = ["standalone", "assert_process_allocs"]}
nih_plug_iced = { path = "../nih-plug-mine/nih_plug_iced", features = ["canvas", "svg", "wgpu"]}


atomic_float = "0.1"

